--- a/.github/workflows/github-pages.yml
+++ b/.github/workflows/github-pages.yml
@@ -31,12 +31,60 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+
       - name: Setup Pages
-        uses: actions/configure-pages@v3
+        uses: actions/configure-pages@v3      
+
+      - name: Get number of commits in current branch
+        id: get_commits
+        run: echo "COMMITS=$(git rev-list --count master)" >> "$GITHUB_OUTPUT"
+
+      # Move all files to v{commits} folder
+      - name: Move files
+        run: |
+          mkdir -p v${{ steps.get_commits.outputs.COMMITS }}
+          mv * v${{ steps.get_commits.outputs.COMMITS }}
+
+      # Download previous files from branch gh-pages
+      - name: Download previous files
+        uses: actions/download-artifact@v2
+        with:
+          name: gh-pages
+
+      # Remove "latest" folder and copy v{commits} folder to "latest"
+      - name: Create latest folder
+        run: |
+          rm -rf latest
+          cp -r v${{ steps.get_commits.outputs.COMMITS }} latest
+
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v2
         with:
           path: './'
+
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v2
+      
+      - name: Discord notification
+        env:
+          DISCORD_WEBHOOK: ${{ secrets.DISCORD_WEBHOOK }}
+          DISCORD_USERNAME: GitHub Actions
+          DISCORD_EMBEDS: '[    { 
+            "author": {  "icon_url": "https://avatars.githubusercontent.com/${{ github.actor }}", "name": "${{ github.actor }}", "url": "https://github.com/${{github.actor}}" },
+            "url": "https://github.com/${{github.repository}}/commit/${{github.sha}}",
+            "fields": [
+            { "name": "Repository", "value": "[${{github.event.repository.name}}](${{github.event.repository.clone_url}})", "inline": true },
+            { "name": "Branch", "value": "[${{github.ref_name}}](https://github.com/${{github.repository}}/tree/${{github.ref_name}})", "inline": true },
+            { "name": "Event", "value": "${{github.event_name}}", "inline": true },
+            { "name": "Commit", "value": "[${{steps.get_short_sha.outputs.SHORT_SHA}}](https://github.com/${{github.repository}}/commit/${{github.sha}})", "inline": true },
+            { "name": "Version", "value": "*v${{steps.get_commits.outputs.COMMITS}}*", "inline": true },
+            { "name": "Commit Message", "value": "`${{github.event.head_commit.message}}`" },
+            ],
+            "color":6710886,
+            "timestamp": "${{github.event.head_commit.timestamp}}",
+            "footer":{"text": "${{github.event.head_commit.timestamp}}"}
+            }    ]'
+        uses: Ilshidur/action-discord@master
+        with:
+          args: 
