--- a/.github/workflows/github-pages.yml
+++ b/.github/workflows/github-pages.yml
@@ -44,6 +44,7 @@ jobs:
         uses: actions/checkout@v2
         with:
           ref: gh-pages
+          clean: false
 
       # Remove "latest" folder and copy v{commits} folder to "latest"
       - name: Create latest folder
