--- a/.github/workflows/github-pages.yml
+++ b/.github/workflows/github-pages.yml
@@ -73,7 +73,7 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v2
         with:
-          path: './gh-pages'
+          path: './'
 
       - name: Deploy to GitHub Pages
         id: deployment
