--- a/.github/workflows/github-pages.yml
+++ b/.github/workflows/github-pages.yml
@@ -58,13 +58,15 @@ jobs:
           rm -rf latest
           cp -r v${{ steps.get_commits.outputs.COMMITS }} latest
 
-      # Commit and push changes to gh-pages
+      # Commit and push changes to gh-pages and write SHA to PAGE_SHA
       - name: Commit and push changes
+        id: commit_and_push
         run: |
           git config --global user.email "ETdoFresh@gmail.com"
           git config --global user.name "ETdoFresh"
           git add .
           git commit -m "Deploy v${{ steps.get_commits.outputs.COMMITS }} to GitHub Pages"
+          echo "PAGE_SHA=$(git rev-parse HEAD)" >> "$GITHUB_OUTPUT"
           git push
 
       # Dispay folders on GitHub Pages
@@ -94,7 +96,8 @@ jobs:
             { "name": "Branch", "value": "[${{github.ref_name}}](https://github.com/${{github.repository}}/tree/${{github.ref_name}})", "inline": true },
             { "name": "Event", "value": "${{github.event_name}}", "inline": true },
             { "name": "Commit", "value": "[${{steps.get_short_sha.outputs.SHORT_SHA}}](https://github.com/${{github.repository}}/commit/${{github.sha}})", "inline": true },
-            { "name": "Version", "value": "*v${{steps.get_commits.outputs.COMMITS}}*", "inline": true },
+            { "name": "Version", "value": "[v${{steps.get_commits.outputs.COMMITS}}](https://github.com/${{github.repository}}/commit/${{steps.commit_and_push.outputs.PAGE_SHA}})", "inline": true },
+            { "name": "Commit Author", "value": "[${{github.event.head_commit.author.name}}](
             { "name": "Commit Message", "value": "`${{github.event.head_commit.message}}`" }
             ],
             "color":6710886,
